fix spacings

--- a/src/components/templates/UserEnrollmentList/UserEnrollments.css
+++ b/src/components/templates/UserEnrollmentList/UserEnrollments.css
@@ -5,13 +5,6 @@
   height: 100%;
 }
 
-/* adds margin top for fixed menu */
-@media (min-width: 750px) {
-  .user-enrollments-page {
-    margin-top: 80px;
-  }
-}
-
 .header {
   display: flex;
   justify-content: space-between;
